; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_EtherLog.c_ElIsBetaExpired.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_EtherLog.c_ElIsBetaExpired.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@ELOG_IS_BETA = common dso_local global i32 0, align 4
@ELOG_BETA_EXPIRES_YEAR = common dso_local global i32 0, align 4
@ELOG_BETA_EXPIRES_MONTH = common dso_local global i32 0, align 4
@ELOG_BETA_EXPIRES_DAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ElIsBetaExpired() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = load i32, i32* @ELOG_IS_BETA, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %23

8:                                                ; preds = %0
  %9 = call i32 @Zero(%struct.TYPE_4__* %2, i32 12)
  %10 = load i32, i32* @ELOG_BETA_EXPIRES_YEAR, align 4
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @ELOG_BETA_EXPIRES_MONTH, align 4
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @ELOG_BETA_EXPIRES_DAY, align 4
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = call i64 @SystemToUINT64(%struct.TYPE_4__* %2)
  store i64 %16, i64* %3, align 8
  %17 = call i64 (...) @LocalTime64()
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* %3, align 8
  %20 = icmp sge i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %8
  store i32 1, i32* %1, align 4
  br label %23

22:                                               ; preds = %8
  store i32 0, i32* %1, align 4
  br label %23

23:                                               ; preds = %22, %21, %7
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @Zero(%struct.TYPE_4__*, i32) #1

declare dso_local i64 @SystemToUINT64(%struct.TYPE_4__*) #1

declare dso_local i64 @LocalTime64(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
